--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
-    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css")
+    link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    link(rel="stylesheet" href="//bootswatch.com/slate/bootstrap.min.css")
     link(rel="stylesheet" href="/css/style.css")
   body
     header
