--- a/views/users/users.jade
+++ b/views/users/users.jade
@@ -20,7 +20,7 @@ block content
         td
           a.btn.btn-default.glyphicon.glyphicon-eye-open(href="/users/"+user.id title="Show User")
         td
-          a.btn.btn-primary.glyphicon.glyphicon-pencil(href="/users/update/"+user.id title="Edit User")
+          a.btn.btn-primary.glyphicon.glyphicon-pencil(href="/users/"+user.id+"/edit" title="Edit User")
         td
-          a.deleteUser.btn.btn-danger.glyphicon.glyphicon-trash(href="/users/delete/"+user.id data-uid=user.id title="Delete User")
+          a.deleteUser.btn.btn-danger.glyphicon.glyphicon-trash(href="/users/"+user.id+"/delete" data-uid=user.id title="Delete User")
   a.btn.btn-default.btn-lg.btn-block.glyphicon.glyphicon-plus(href="/users/add" title="Add New User")
