--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-inverse.navbar-fixed-top
+nav.navbar.navbar-default.navbar-fixed-top
     .container
         .navbar-header
             button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false")
@@ -15,5 +15,3 @@ nav.navbar.navbar-inverse.navbar-fixed-top
                     a(href="/users") About
                 li
                     a(href="/users") Contact
-            p.navbar-text.navbar-right= "Signed in as "
-                a(href="#") Oleh Melnyk
