--- a/views/users/userAdd.jade
+++ b/views/users/userAdd.jade
@@ -20,5 +20,5 @@ block content
             label(for="lastName") Last Name
             input.form-control#lastName(type="text" name="lastName" value="" placeholder="Last Name" autocomplete="off" required)
           .form-group
-            button.btn.btn-primary(type="submit") Add
+            button.btn.btn-default(type="submit") Add
             button.btn.btn-default.pull-right#cancel(type="button") Cancel
