--- a/views/users/userEdit.jade
+++ b/views/users/userEdit.jade
@@ -22,5 +22,5 @@ block content
               label(for="lastName") Last Name
               input.form-control#lastName(type="text" name="lastName" value=user.lastName autocomplete="off" required)
             .form-group
-              button.btn.btn-primary(type="submit") Save
+              button.btn.btn-default(type="submit") Save
               button.btn.btn-default.pull-right#cancel(type="button") Cancel
