modifications to work syncronous w/o AJAX

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,4 +14,6 @@ html
       p.container &copy; 2016 All rights reserved
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
     script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous")
-    script(src="/js/users.js")
+    script(src="/js/main.js")
+    //script(src="/js/usersAsync.js")
+    script(src="/js/usersSync.js")
