changes to layout: for case where there's no users to show, and autofocus for adding new user or editing existing user

--- a/views/users/userAdd.jade
+++ b/views/users/userAdd.jade
@@ -15,7 +15,7 @@ block content
         form#addUser(method="POST" action="/users/add")
           .form-group
             label(for="firstName") First Name
-            input.form-control#firstName(type="text" name="firstName" value="" placeholder="Fist Name" autocomplete="off" required)
+            input.form-control#firstName(type="text" name="firstName" value="" placeholder="Fist Name" autocomplete="off" autofocus required)
           .form-group
             label(for="lastName") Last Name
             input.form-control#lastName(type="text" name="lastName" value="" placeholder="Last Name" autocomplete="off" required)
