--- a/views/users/userEdit.jade
+++ b/views/users/userEdit.jade
@@ -17,7 +17,7 @@ block content
             input(type="hidden" name="id" value=uid)
             .form-group
               label(for="firstName") First Name
-              input.form-control#firstName(type="text" name="firstName" value=user.firstName autocomplete="off" required)
+              input.form-control#firstName(type="text" name="firstName" value=user.firstName autocomplete="off" autofocus required)
             .form-group
               label(for="lastName") Last Name
               input.form-control#lastName(type="text" name="lastName" value=user.lastName autocomplete="off" required)
