minor change to layout: center text, that there are no users to show

--- a/views/users/users.jade
+++ b/views/users/users.jade
@@ -25,5 +25,5 @@ block content
           td
             a.deleteUser.btn.btn-danger.glyphicon.glyphicon-trash(href="/users/"+user.id+"/delete" data-uid=user.id title="Delete User")
   else
-    p.well.well-lg Add some users to show them here!
+    p.well.well-lg.text-center Add some users to show them here!
   a.btn.btn-default.btn-lg.btn-block.glyphicon.glyphicon-plus(href="/users/add" title="Add New User")
