--- a/views/users/userEdit.jade
+++ b/views/users/userEdit.jade
@@ -1,26 +1,26 @@
 extends ../layout
 
 block content
-  ol.breadcrumb
-    li
-      a(href="/") Home
-    li
-      a(href="/users") Users
-    li.active= user.firstName+" "+user.lastName
+    ol.breadcrumb
+        li
+            a(href="/") Home
+        li
+            a(href="/users") Users
+        li.active= user.firstName + " " + user.lastName
 
-  .col-md-6.col-md-offset-3
-    .panel.panel-default
-      .panel-heading Edit User
-      .panel-body
-        form#updateUser(method="POST" action="/users/"+user.id+"/edit")
-          div#user.id
-            input(type="hidden" name="id" value=user.id)
-            .form-group
-              label(for="firstName") First Name
-              input.form-control#firstName(type="text" name="firstName" value=user.firstName autocomplete="off" autofocus required)
-            .form-group
-              label(for="lastName") Last Name
-              input.form-control#lastName(type="text" name="lastName" value=user.lastName autocomplete="off" required)
-            .form-group
-              button.btn.btn-default(type="submit") Save
-              button.btn.btn-default.pull-right#cancel(type="button") Cancel
+    .col-md-6.col-md-offset-3
+        .panel.panel-default
+            .panel-heading Edit User
+            .panel-body
+                form#updateUser(method="POST" action="/users/" + user.id + "/edit")
+                    #user.id
+                        input(type="hidden" name="id" value=user.id)
+                        .form-group
+                            label(for="firstName") First Name
+                            input.form-control#firstName(type="text" name="firstName" value=user.firstName autocomplete="off" autofocus required)
+                        .form-group
+                            label(for="lastName") Last Name
+                            input.form-control#lastName(type="text" name="lastName" value=user.lastName autocomplete="off" required)
+                        .form-group
+                            button.btn.btn-default(type="submit") Save
+                            button.btn.btn-default.pull-right#cancel(type="button") Cancel
